# Jasskell

./: .gitignore  CHANGELOG.md  Makefile  README.md  cabal.project  elm.json  hie.yaml  jasskell.cabal  notes.md  package-lock.json  package.yaml  tsconfig.json
client/: .gitignore  elm.json  index.html  style.css  tailwind.config.js  tsconfig.json
client/src/: API.elm  Card.elm  Circle.elm  Hand.elm  Home.elm  Main.elm  Play.elm  Route.elm  Seat.elm  Table.elm  TableID.elm  User.elm  Variant.elm  Vector.elm  WebSocket.elm
client/src/Card/: Rank.elm  Suit.elm
client/src/Play/: AsGuest.elm  Declaring.elm  Joining.elm  Playing.elm  Waiting.elm
client/src/Vector/: Index.elm
client/src/typescript/: app.ts  index.ts
client/static/: index.js
core/: CHANGELOG.md  hie.yaml  jasskell-core.cabal
core/src/: Card.hs  Game.hs  Jass.hs  Round.hs
core/src/Data/Vector/Sized/: Extra.hs
core/src/Jasskell/: Card.hs  Dealer.hs  Declaration.hs  Game.hs  Interface.hs  Jass.hs  Prompt.hs  Round.hs  Trick.hs  Variant.hs  View.hs  Views.hs
core/src/Jasskell/Card/: Suit.hs
core/src/Jasskell/Game/: View.hs
core/src/Jasskell/Round/: State.hs  View.hs
core/src/Jasskell/Trick/: State.hs  View.hs
core/src/Jasskell/View/: Absolute.hs  Declaring.hs  Playing.hs  Relative.hs
core/src/View/: Playing.hs
core/test/: CardSpec.hs  CardTest.hs  Gen.hs  Test.hs  VectorTest.hs
server/: CHANGELOG.md  ChangeLog.md  hie.yaml  jasskell-server.cabal  package.yaml  stack.yaml
server/app/: Main.hs
server/src/Jasskell/: Action.hs  Card.hs  Event.hs  Game.hs  GameState.hs  GameView.hs  Player.hs  Round.hs  Server.hs  ServerState.hs  Trick.hs  User.hs  Variant.hs
server/src/Jasskell/Card/: Internal.hs  Rank.hs  Suit.hs
server/src/Jasskell/Server/: API.hs  Action.hs  App.hs  Client.hs  Decoder.hs  Encoder.hs  Env.hs  Error.hs  GameState.hs  GuestView.hs  Html.hs  Http.hs  Message.hs  Page.hs  Player.hs  PlayerView.hs  Seat.hs  ServerState.hs  Table.hs  TableID.hs  TableState.hs  User.hs  View.hs  WebSocket.hs
server/src/Jasskell/Server/Html/: Index.hs
server/test/Jasskell/: CardSpec.hs
src/: Action.hs  Card.hs  Game.hs  GameState.hs  Jass.hs  JassNat.hs  Message.hs  Round.hs  ServerState.hs  Suit.hs  Table.hs  TableID.hs  Trick.hs  User.hs  Variant.hs  View.hs
src/Card/: Suit.hs  Valid.hs
src/Data/Vector/Sized/: Extra.hs
src/Jasskell/: Action.hs  Card.hs  Event.hs  Game.hs  GameView.hs  Player.hs  Round.hs  Trick.hs  User.hs  Variant.hs
src/Jasskell/Card/: Rank.hs  Suit.hs
src/Round/: Record.hs
src/View/: Declaring.hs  Playing.hs
src/client/: Main.elm
src/client/Card/: Rank.elm  Suit.elm
src/client/Page/: Home.elm
src/server/Jasskell/: Action.hs  Card.hs  Event.hs  Game.hs  GameID.hs  GameState.hs  GameView.hs  Message.hs  Player.hs  Round.hs  Server.hs  ServerState.hs  Table.hs  Trick.hs  User.hs  Variant.hs
src/server/Jasskell/Card/: Internal.hs  Rank.hs  Suit.hs
src/server/Jasskell/Server/: WebSocket.hs
static/: style.css
test/: CardSpec.hs
test/server/Jasskell/: CardSpec.hs
