cabal-version:      3.0
name:               jasskell
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Ambros Lins
maintainer:         ambros.lins@gmail.com

-- A copyright notice.
-- copyright:
category:           Game
extra-source-files: CHANGELOG.md

common common
  default-language: Haskell2010
  ghc-options:
    -Wall
    -fplugin GHC.TypeLits.Normalise

  default-extensions:
    , ImportQualifiedPost
    , DataKinds
    , LambdaCase
    , NamedFieldPuns
    , ScopedTypeVariables
    , TypeFamilies
    , TypeOperators
    , TypeApplications

  build-depends:
    , base ^>=4.14.3.0
    , relude ^>=1.0.0.1
    , containers ^>=0.6.5.1
    , finite-typelits ^>=0.1
    , vector-sized ^>= 1.5.0
    , ghc-typelits-natnormalise ^>=0.7.6

  mixins:
    , base hiding (Prelude)
    , relude (Relude as Prelude)
    , relude

library
  import:           common
  hs-source-dirs:   src
  exposed-modules:  
    , Card
    , Card.Suit
    , Trick
    , Variant

  -- Modules included in this library but not exported.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

executable jasskell
  import:           common
  hs-source-dirs:   app
  main-is:          Main.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , jasskell

test-suite jasskell-test
  import:           common
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Spec.hs
  build-tool-depends: hspec-discover:hspec-discover ^>=2.9.4
  ghc-options:
    -Wno-orphans

  build-depends:
    , jasskell
    , hspec ^>=2.9.4
    , QuickCheck ^>=2.14.2
  
  other-modules:
    , CardSpec
