cabal-version:      3.0
name:               jasskell
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Ambros Lins
maintainer:         ambros.lins@gmail.com

-- A copyright notice.
-- copyright:
category:           Game
extra-source-files: CHANGELOG.md

common common
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wextra
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
    -fplugin GHC.TypeLits.Normalise

  default-extensions:
    , ConstraintKinds
    , DataKinds
    , DeriveFunctor
    , DerivingStrategies
    , FlexibleContexts
    , GADTs
    , GeneralizedNewtypeDeriving
    , ImportQualifiedPost
    , LambdaCase
    , NamedFieldPuns
    , ScopedTypeVariables
    , StandaloneDeriving 
    , TypeApplications
    , TypeFamilies
    , TypeOperators

  build-depends:
    , base ^>=4.14.3.0
    , relude ^>=1.0.0.1
    , containers ^>= 0.6.5.1
    , unordered-containers ^>= 0.2.19.1
    , finite-typelits ^>=0.1
    , vector-sized ^>= 1.5.0
    , ghc-typelits-natnormalise ^>=0.7.6
    , mtl ^>= 2.2.2
    , free ^>= 5.1.7
    , random ^>= 1.2.1
    , stm ^>= 2.5.0.2
    , uuid ^>= 1.3.15

  mixins:
    , base hiding (Prelude)
    , relude (Relude as Prelude)
    , relude

library
  import:           common
  hs-source-dirs:   src
  exposed-modules:  
    , Action
    , Card
    , Card.Suit
    , Game
    , GameState
    , Jass
    , Message
    , Round
    , Round.Record
    , ServerState
    , Table
    , Trick
    , User
    , Variant
    , View
    , View.Declaring
    , View.Playing

  -- Modules included in this library but not exported.
  other-modules:
    , Data.Vector.Sized.Extra

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

executable jasskell
  import:           common
  hs-source-dirs:   app
  main-is:          Main.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , jasskell

test-suite jasskell-test
  import:           common
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Spec.hs
  build-tool-depends: hspec-discover:hspec-discover ^>=2.9.4
  ghc-options:
    -Wno-orphans

  build-depends:
    , jasskell
    , hspec ^>=2.9.4
    , QuickCheck ^>=2.14.2
  
  other-modules:
    , CardSpec
